tests/compile_fail/multiple_scopes.stderr
error[E0499]: cannot borrow `guard` as mutable more than once at a time
  --> tests/compile_fail/multiple_scopes.rs:12:21
   |
11 |   let a = use_scope(guard.scope());
   |                     ----- first mutable borrow occurs here
12 |   let b = use_scope(guard.scope());
   |                     ^^^^^ second mutable borrow occurs here
13 |
14 |   dbg!(a);
   |        - first borrow later used here
